update icons (temp) fix hi tom on safari

--- a/cordova/www/css/groove_writer_orange.css
+++ b/cordova/www/css/groove_writer_orange.css
@@ -1093,14 +1093,12 @@ hr {
   font-family: FontAwesome;
   font-size: 2em;
   letter-spacing: -3px;
-  content: "\f065";
   line-height: 32px;
 }
 #showHideStickingsButton.ClickToHide:before {
   font-family: FontAwesome;
   font-size: 2em;
   letter-spacing: -3px;
-  content: "\f066";
   line-height: 32px;
 }
 #showHideCountingsButton {
@@ -1109,14 +1107,12 @@ hr {
   font-family: FontAwesome;
   font-size: 2em;
   letter-spacing: -3px;
-  content: "\f017";
   line-height: 32px;
 }
 #showHideCountingsButton.ClickToHide:before {
   font-family: FontAwesome;
   font-size: 2em;
   letter-spacing: -3px;
-  content: "\f017";
   line-height: 32px;
 }
 #printButton {
@@ -1202,7 +1198,6 @@ input[type="checkbox"]:not(:checked) + label {
 .bottomButtonIcon {
   display: block;
 }
-
 .bottomButtonLabel {
   margin-top: 2px;
   display: block;
